--- a/com.Practice.FrameWork/pom.xml
+++ b/com.Practice.FrameWork/pom.xml
@@ -56,10 +56,23 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.0</version>
+					<version>3.6.2</version>
 					<configuration>
 						<source>1.8</source>
 						<target>1.8</target>
+					</configuration>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.21.0</version>
+					<configuration>
+						<forkCount>0</forkCount>
+						<executable>C:\Program Files\Java\jdk1.8.0_161\bin\javac.exe</executable>
+						<suiteXmlFiles>
+							<suiteXmlFile>bulkTestCases.xml</suiteXmlFile>
+						</suiteXmlFiles>
 					</configuration>
 				</plugin>
 			</plugins>
